# semker

./: .gitignore  LICENSE  README.md
scripts/: cleanup.py  run-bdd-tests.sh  start-aspire.sh  start-backend.sh  start-frontend.sh  start-logviewer.sh  start-mcpserver.sh
src/: __init__.py
src/backend/: .behaverc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TYPE_SAFETY.md  __init__.py  api.py  pyproject.toml
src/backend/agents/: __init__.py  base.py  billing.py  config.py  faq.py  planner.py  roaming.py  skernel.py  tariff.py
src/backend/config/: __init__.py  constants.py  settings.py  telemetry.py  telemetry_config.py
src/backend/models/: __init__.py  schemas.py
src/backend/process/: __init__.py  message_processor.py
src/backend/scripts/: README.md  check-types.sh  docker-build.sh  docker-run.sh  format.sh  run_bdd_tests.sh  start-with-aspire.sh  start_server.sh  test_cors.sh
src/backend/telemetry/: README.md  __init__.py  appinsights.py  aspire.py  filelog.py  httpx_logger.py  middleware.py  otel_config.py
src/backend/tests/: __init__.py  config.py
src/backend/tests/features/: environment.py  error_handling.feature  message_api.feature  smoke_test.feature
src/backend/tests/features/steps/: api_steps.py
src/frontend/: .gitignore  README.md  package-lock.json  package.json
src/frontend/public/: index.html  manifest.json
src/frontend/src/: App.css  App.tsx  index.css
src/frontend/src/components/: Footer.tsx  Header.tsx  MainContent.tsx
src/frontend/src/services/: apiService.ts
src/logviewer/: .gitignore  LogViewer.css  LogViewer.tsx  app.py  index.tsx  package-lock.json  package.json  tsconfig.json
src/logviewer/public/: index.html
src/logviewer/src/: LogViewer.css  LogViewer.tsx  index.tsx
src/logviewer/templates/: index.html
src/mcpserver/: Dockerfile  README.md  main.py  mypy.ini  pyproject.toml
src/mcpserver/telemetry/: __init__.py  aspire.py  hooks.py
src/mcpserver/tools/: billing.py  broadband.py  roaming.py  tariff.py  tarriff.py  ticket.py
src/mcpserver/tools/billing/: __init__.py  data.py  schemas.py  tools.py
src/mcpserver/tools/broadband/: __init__.py  data.py  schemas.py  tools.py
src/mcpserver/tools/faq/: __init__.py  tools.py
src/mcpserver/tools/roaming/: __init__.py  data.py  schemas.py  tools.py
src/mcpserver/tools/tariff/: __init__.py  data.py  schemas.py  tools.py
src/mcpserver/tools/ticket/: __init__.py  data.py  schemas.py  tools.py
