[project]
name = "src"
version = "0.1.0"
description = "MCP Server with customer service tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.14",
    "mcp>=1.10.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.34.1",
    "opentelemetry-instrumentation-fastapi>=0.55b1",
]
